<?xml version="1.0"?>
<package>
  <name>umd_arcl_driver</name>
  <version>0.0.1</version>
  <description>
    A ROS interface to send Omron ARCL commands to Omron LD-series robots
  </description>
  <maintainer email="srbellai@umich.edu">
    Samuel Bellaire
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
