<?xml version="1.0"?>
<package>
  <name>umd_arcl_teleop</name>
  <version>0.0.1</version>
  <description>
    A Teleoperations package designed to work with umd_arcl_ros to control
    Omron LD-series robots with a PS3 controller
  </description>
  <maintainer email="srbellai@umich.edu">
    Samuel Bellaire
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>joy</build_depend>
  <run_depend>joy</run_depend>
</package>
